--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,188 @@
-.App {
-  text-align: center;
+body,
+html {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18.2px;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  height: 100vh;
+  background-color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.box {
+  position: relative;
+  width: 370px;
+  height: 326px;
+  top: 85px;
+  padding: 10px 0;
+  border-radius: 6px;
+  border: 1px solid #eeeeee;
+  box-shadow: 0 8px 15px 0 #1414141f, 0 0 4px 0 #1414141a;
+  background-color: white;
+  color: #1f2128;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.header,
+.page-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 42px;
+  padding: 0 15px 0 22px;
+  cursor: pointer;
+  position: relative;
+}
+
+.content {
+  max-height: 164px;
+  overflow-y: scroll;
+  color: #1f2128;
+}
+
+.content::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+.custom-checkbox {
+  position: relative;
+  width: 23px;
+  height: 23px;
+  border: 1px solid #cdcdcd;
+  opacity: 60%;
+  border-radius: 6px;
+  background-color: white;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-checkbox::before {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  background-image: url("Assets/Vector\ 128\(2\).png");
+  background-size: cover;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+}
+.custom-checkbox.checked::before {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  background-image: url("Assets/Vector\ 128.png");
+  background-size: cover;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+}
+.custom-checkbox:hover::before,
+.header:hover .custom-checkbox::before,
+.page-row:hover .custom-checkbox::before {
+  visibility: visible;
+}
+
+.custom-checkbox:active::before,
+.header:active .custom-checkbox::before,
+.page-row:active .custom-checkbox::before {
+  visibility: visible;
+}
+.custom-checkbox:active {
+  box-shadow: 0 8px 15px 0 #1414141f, 0 0 4px 0 #1414141a;
+  opacity: 1;
+}
+.custom-checkbox.checked {
+  background-color: #2469f6;
+  border-color: #2469f6;
+  opacity: 1;
+}
+
+.custom-checkbox.checked::before {
+  visibility: visible;
+}
+
+.custom-checkbox.checked:active {
+  background-color: #5087f8;
+}
+
+.custom-checkbox.checked:hover {
+  background-color: #5087f8;
+}
+
+.custom-checkbox:not(.checked):hover {
+  opacity: 1;
+}
+
+hr {
+  margin: 15px 15px;
+  transition: border-color 0.3s ease;
+  border: 0.7px solid #eeeeee;
+}
+
+.btn-box {
+  padding: 10px 15px;
+  height: 60px;
+  margin: 10px 0;
+}
+
+.done-button {
+  width: 100%;
+  padding: 10px 20px;
+  background-color: #ffce22;
+  color: #1f2128;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  height: 40px;
+}
+
+.done-button:hover {
+  background-color: #ffd84d;
+}
+
+.done-button:active {
+  background-color: #ffce22;
+}
+
+.dark {
+  border-color: #cdcdcd;
+}
+
+/* Media Queries for Responsiveness */
+@media screen and (max-width: 400px) {
+  .box {
+    width: 100%;
+    height: auto;
+    margin: 0 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .header,
+  .page-row {
+    padding: 0 10px;
+  }
+
+  .done-button {
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+  .btn-box {
+    height: 100%;
   }
 }
